fix : contraste footer

--- a/frontend/scss/main.scss
+++ b/frontend/scss/main.scss
@@ -179,7 +179,11 @@ footer.footer{
 }
 
 .ferme {
-    color: $accent; // #d4af37
+    color: rgb(255, 242.6, 205.4);
+}
+
+.copy-right{
+    color: rgb(255, 242.6, 205.4) !important;
 }
 
 /* Hero scene */
